# vbcpp

./: .gitignore  .gitmodules  CMakeLists.txt  Editor.cpp  EditorMain.cpp  EditorMain.h  Game.cpp  Game.h  LICENSE  README.md  main.cpp  vbcpp.cbp
.circleci/: config.yml
.github/workflows/: build.yml
Bus/: Bus.cpp  Bus.h  BusConfigurationsLoader.cpp  BusConfigurationsLoader.h  BusConstraint.cpp  BusConstraint.h  BusDescription.h  BusLoader.cpp  BusLoader.h  BusPreviewLoader.cpp  BusPreviewLoader.h  BusRaycast.cpp  BusRaycast.h  BusRepaintDescription.h  BusRepaintLoader.cpp  BusRepaintLoader.h  CMakeLists.txt  Desktop.cpp  Desktop.h  Door.cpp  Door.h  DoorClassic.cpp  DoorClassic.h  DoorSE.cpp  DoorSE.h  DoorSimple.cpp  DoorSimple.h
Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorContext.h  EditorEvent.h  EditorGUI.cpp  EditorGUI.h  FileDialogs.cpp  FileDialogs.h
Editor/Tools/: AxisTool.cpp  AxisTool.h  RoadManipulator.cpp  RoadManipulator.h
Editor/Utils/: AIPathGenerator.cpp  AIPathGenerator.h  ObjectsGenerator.cpp  ObjectsGenerator.h  RoadPolygonsGenerator.cpp  RoadPolygonsGenerator.h
Editor/Windows/: CameraSettingsWindow.cpp  CameraSettingsWindow.h  ComputeShaderTestWindow.cpp  ComputeShaderTestWindow.h  EditorWindow.cpp  EditorWindow.h  GenerateObjectsAlongCurveWindow.cpp  GenerateObjectsAlongCurveWindow.h  GenerateObjectsAlongRoadWindow.cpp  GenerateObjectsAlongRoadWindow.h  LoggerWindow.cpp  LoggerWindow.h  MapInfoWindow.cpp  MapInfoWindow.h  MaterialEditorWindow.cpp  MaterialEditorWindow.h  NewDialogWindow.cpp  NewDialogWindow.h  ObjectDefinitionsWindow.cpp  ObjectDefinitionsWindow.h  ObjectPropertiesWindow.cpp  ObjectPropertiesWindow.h  OpenDialogWindow.cpp  OpenDialogWindow.h  RoadTools.cpp  RoadTools.h  SceneGraphWindow.cpp  SceneGraphWindow.h
GUI/: Button.cpp  Button.h  CMakeLists.txt  FontLoader.cpp  FontLoader.h  GUIManager.cpp  GUIManager.h  GUIObject.cpp  GUIObject.h  GUIRenderListElement.cpp  GUIRenderListElement.h  Image.cpp  Image.h  Label.cpp  Label.h  Picker.cpp  Picker.h  ProgressBar.cpp  ProgressBar.h
Game/: AIAgent.cpp  AIAgent.h  AIAgentPhysicalVechicle.cpp  AIAgentPhysicalVechicle.h  BusStartPoint.cpp  BusStartPoint.h  BusStopComponent.cpp  BusStopComponent.h  BusStopSystem.cpp  BusStopSystem.h  CMakeLists.txt  CameraControlComponent.cpp  CameraControlComponent.h  CameraControlSystem.cpp  CameraControlSystem.h  Directories.h  GameConfig.cpp  GameConfig.h  GameEnvironment.cpp  GameEnvironment.h  GameLogicSystem.cpp  GameLogicSystem.h  GameScene.cpp  GameScene.h  GameScenesNames.h  Hud.cpp  Hud.h  LoadingScreenScene.cpp  LoadingScreenScene.h  MainGameScene.cpp  MainGameScene.h  MenuSelectBusScene.cpp  MenuSelectBusScene.h  PathComponent.cpp  PathComponent.h  TestScene.cpp  TestScene.h
Game/MainGameScene/: MirrorImage.cpp  MirrorImage.h
Graphics/: AABB.h  AnimatedModelLoader.cpp  AnimatedModelLoader.h  AnimationLoader.cpp  AnimationLoader.h  AnimationNodeData.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraFPS.cpp  CameraFPS.hpp  CameraStatic.cpp  CameraStatic.hpp  CrossroadComponent.cpp  CrossroadComponent.h  DisplayComponent.cpp  DisplayComponent.h  EnvironmentCaptureComponent.cpp  EnvironmentCaptureComponent.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  GraphicsManager.cpp  GraphicsManager.h  Grass.cpp  Grass.h  IBO.cpp  IBO.h  Light.cpp  Light.h  Load3ds.cpp  Load3ds.h  LoadMaterial.cpp  LoadMaterial.h  LoadShader.cpp  LoadShader.h  LoadTerrainModel.cpp  (+87 more)
Graphics/NVMeshMender/: NVMeshMender.cpp  NVMeshMender.h
Graphics/StorageBuffer/: PickingShaderStorageBufferData.h
ImGui/: CMakeLists.txt  imGizmo.cpp  imGizmo.h  imRoadTools.cpp  imRoadTools.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
ImGuiInterface/: BusLineAndDirectionWindow.cpp  BusLineAndDirectionWindow.h  BusParametersWindow.cpp  BusParametersWindow.h  CMakeLists.txt  ColorsWindow.cpp  ColorsWindow.h  ImGuiInterface.h  ImGuiInterfaceContext.h  ImGuiWindow.cpp  ImGuiWindow.h  ImguiInterface.cpp  MenuBar.cpp  MenuBar.h  MenuSelectBusInterfaceWindow.cpp  MenuSelectBusInterfaceWindow.h  PhysicsDebuggerWindow.cpp  PhysicsDebuggerWindow.h  VariablesWindow.cpp  VariablesWindow.h
Physics/: CMakeLists.txt  Constraint.cpp  Constraint.hpp  ConstraintBall.cpp  ConstraintBall.h  ConstraintHinge.cpp  ConstraintHinge.hpp  ConstraintHinge2.cpp  ConstraintHinge2.hpp  PhysicalBody.cpp  PhysicalBody.hpp  PhysicalBodyBox.cpp  PhysicalBodyBox.hpp  PhysicalBodyBvtTriangleMesh.cpp  PhysicalBodyBvtTriangleMesh.hpp  PhysicalBodyConvexHull.cpp  PhysicalBodyConvexHull.hpp  PhysicalBodyCylinder.cpp  PhysicalBodyCylinder.hpp  PhysicalBodyRaycastVehicle.cpp  PhysicalBodyRaycastVehicle.h  PhysicalBodySphere.cpp  PhysicalBodySphere.hpp  PhysicalBodyStaticPlane.cpp  PhysicalBodyStaticPlane.hpp  PhysicalBodyWheel.cpp  PhysicalBodyWheel.h  PhysicsManager.cpp  PhysicsManager.hpp
Scene/: Bus.cpp  Bus.cpp.save-failed  Bus.h  CMakeLists.txt  ClickableObject.h  Component.cpp  Component.h  Door.h  DoorSE.h  DoorSimple.h  PhysicsComponent.cpp  PhysicsComponent.hpp  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SceneObject.cpp  SceneObject.h  SceneSaver.cpp  SceneSaver.h  Skybox.cpp  Skybox.h  SoundComponent.h  SoundManager.h  sceneObject.cpp
Utils/: AssimpGlmConverter.cpp  AssimpGlmConverter.h  BezierCurvesUtils.cpp  BezierCurvesUtils.h  CMakeLists.txt  Collision.cpp  Collision.h  Engine.cpp  Engine.h  FilesHelper.cpp  FilesHelper.h  Gearbox.cpp  Gearbox.h  GlmUtils.cpp  GlmUtils.h  Helpers.cpp  Helpers.hpp  InputSystem.cpp  InputSystem.h  LocalizationSystem.cpp  LocalizationSystem.h  Logger.cpp  Logger.h  Logger2.cpp  Logger2.h  Math.h  PolygonGenerator.cpp  PolygonGenerator.h  QuaternionUtils.cpp  QuaternionUtils.h  RAnimatedModel.cpp  RAnimatedModel.h  RFont.cpp  RFont.h  RModel.cpp  RModel.h  RObject.cpp  RObject.h  RObjectLoader.cpp  RObjectLoader.h  (+29 more)
Window/: CMakeLists.txt  Window.cpp  Window.h
include/GLFW/: glfw3native.h
libs/assimp-4.0.1/: CMakeLists.txt
libs/bullet/: CMakeLists.txt
libs/glew/: CMakeLists.txt
(+5 files in other folders)
